# LVGL_3DS_TEST

./: .gitignore  CMakeLists.txt  Makefile  Readme.md
src/: lv_conf.h
src/main/: display.c  input.c  main.c  sections.h  ui.c
